# pacr

./: .gitignore  ana.ipynb  centerloss.ipynb  config.py  doc.typ  draw.ipynb  draw2.ipynb  loss.py  main-1-3.ipynb  main-1-full-ana.ipynb  main-1-full.ipynb  main-1-full.py  main-1-opt-lam.ipynb  main-1-opt.ipynb  main-1.ipynb  main-2-3.ipynb  main-2.ipynb  main-3-reg.ipynb  main-3-reg.py  main-3.ipynb  main-4.ipynb  main-cifar100.py  main.py  models.py  pyproject.toml  temp.txt  utils.py
results/20260114_172859/: or.json
results/20260114_190510/: reg.json
results/20260114_205819/: reg.json
results/20260114_221446/: reg.json
results/20260114_235928/: reg.json
results/20260115_132301/: reg.json
results/20260115_132632-full/: reg.json
results/20260115_183903/: reg.json
results/20260115_193458/: ana.json
results/20260115_195802/: ana.json
results/20260115_210159/: ana.json
results/20260115_232807/: ana.json
results/20260115_234417/: ana.json
results/20260116_000130-full/: reg.json
results/20260116_140828/: ana.json
results/20260116_142816/: ana.json
results/20260116_144332/: ana.json
results/20260116_145753/: ana.json
results/20260116_151308/: ana.json
results/20260116_153415/: ana.json
results/20260116_154907/: ana.json
results/20260116_161232/: ana.json
results/20260116_162510/: ana.json
results/20260116_163442/: ana.json
results/20260116_164245/: ana.json
results/20260116_165031/: ana.json
results/20260116_190223/: ana.json
results/20260116_192831/: ana.json
results/20260116_194955/: ana.json
(+5 files in other folders)
